handle semantic relation checks in NVS tables